--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Curso Javascript</h1>
+    <h2>Entrega complementaria</h2>
+    <h3>Generador de tablas</h3>
+    <script src="index.js">
+    </script>
 </body>
 </html>
