--- a/index.html
+++ b/index.html
@@ -4,26 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Document</title>
 </head>
 <body>
     <h1>Curso Javascript</h1>
-    <h2>Simulador Interactivo</h2>
-    <h3>Calculadora de impuestos de tu juego de Steam</h3>
-    <form clas="formulario">
-        <p>Indique el pais donde reside:</p>
-        <input type="radio" name="impuesto" id="uno">Argentina
-        <input type="radio" name="impuesto" id="dos">Chile
-        <input type="radio" name="impuesto" id="tres">Brasil
-        <input type="radio" name="impuesto" id="cuatro">Uruguay 
-        <p>Ingrese valor del juego (Dólares):</p> 
-        <input type="number" id="valor" min="1" max="1000000">
-        <input type="button" id="calcular" value="Calcular Total" onclick="calcularTotal()">
-    </form>
-    <div class="imagen">
-        <img src="./IMG/Steam.png" alt="steamLogo">
-    </div>
+    <h2>Arrays</h2>
+
 
     <script src="index.js">
     </script>
