1era entrega con errores :(

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <nav class="navbar bg-light">
           <div class="container-fluid">
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input id="InputSearch" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <button id="filtrar" class="btn btn-outline-success" type="submit">Filtrar</button>
             </form>
           </div>
         </nav>
@@ -50,12 +50,13 @@
       <h2>Carrito</h2>
       <div class="showCart">
           <div id="cartList">
-              <h3>Detalle de compra</h3>
+              <h3>Detalle de compra:</h3>
               <div class="div">
 
               </div>
               
           </div>
+      </section>
 
       <footer class="footer">
         <ul  id="pie-pagina">
