--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="div">
 
               </div>
-              
+             <h4 id="totalCompra">Precio Total : AR$</h4> 
           </div>
       </section>
 
