--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <ul class="nav nav-pills nav-fill">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link active" aria-current="page" href="#">Catálogo</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Much longer nav link</a>
