intentando hacer filtro y cantidad

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
   </head>
   <body>
     <header class="animate__animated animate__backInLeft" class="titulo">
-      <div>
-        <img class="header__img" src="./IMG/crazy drinks logo.jpg" />
-      </div>  
-      <div class="header__leyenda--container">
-        <h1 class="header__leyenda">Crazy Drinks</h1>
-        <h4 class="header__leyenda">
-          ¡Tus bebidas a toda hora en todo lugar!
-        </h4>
+      <div class="overlay">
+        <div class="header__leyenda--container">
+          <h1 class="header__leyenda">Crazy Drinks</h1>
+          <h4 class="header__leyenda">
+            ¡Tus bebidas a toda hora en todo lugar!
+          </h4>
+        </div>
       </header>    
     </div>
     <ul class="nav nav-pills nav-fill">
@@ -31,12 +30,12 @@
         <a class="nav-link" href="#">Much longer nav link</a>
       </li>
       <li class="nav-item">
-        <a id="mostrarCarrito" class="nav-link" href="#">Ver Carrito</a>
+        <a id="mostrarCarrito" class="nav-link" href="./carrito.html">Ver Carrito</a>
       </li>
-      <nav class="navbar bg-light">
+      <nav class="navbar bg-dark">
         <div class="container-fluid">
             <form class="d-flex" role="search">
-              <input id="InputSearch" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <input id="InputSearch" class="form-control me-2" type="text" placeholder="Buscar" aria-label="Search">
               <button id="filtrar" class="btn btn-outline-success" type="submit">Filtrar</button>
             </form>
           </div>
