--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <div class="showCart">
           <div id="cartList">
             <h3>Detalle de compra:</h3>
+            <div class="titulosCarrito">
+                <h4 class="liProducto">Producto</h4>
+                <h4 class="liPrecio">Precio</h4>
+                <h4 class="liCantidad">Cantidad</h4>
+            </div>
             <div class="div">
               
             </div>
