--- a/carrito.html
+++ b/carrito.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tu Carrito</title>
   </head>
   <body>
     <header class="animate__animated animate__backInLeft" class="titulo">
@@ -41,14 +41,22 @@
   <div class="showCart">
     <div id="cartList">
       <h3>Detalle de compra:</h3>
-      <div class="CartSection">
+      <div class="titulosCarrito">
+          <h4 class="liProducto">Producto</h4>
+          <h4 class="liPrecio">Precio</h4>
+          <h4 class="liCantidad">Cantidad</h4>
+      </div>
+      <div class="div">
         
       </div>
       <h4 id="totalCompra">Precio Total : AR$</h4> 
     </div>
   </section>
+  <div class="buttonComprar">
+    <button id="comprar" >Comprar</button>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="index.js">
+  <script src="carrito.js">
   </script>
 </body>
 </html>
