--- a/carrito.html
+++ b/carrito.html
@@ -46,7 +46,7 @@
           <h4 class="liPrecio">Precio</h4>
           <h4 class="liCantidad">Cantidad</h4>
       </div>
-      <div class="div">
+      <div class="divCart">
         
       </div>
       <h4 id="totalCompra">Precio Total : AR$</h4> 
