--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
         </div>
       </header>    
     </div>
-    <ul class="nav nav-pills nav-fill">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Catálogo</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Much longer nav link</a>
-      </li>
-      <li class="nav-item">
-        <a id="mostrarCarrito" class="nav-link" href="./carrito.html">Ver Carrito</a>
-      </li>
-      </ul>
+    <div class="navBar">
+      <ul class="nav nav-pills nav-fill navbar">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Catálogo</a>
+        </li>
+        <li class="nav-item">
+          <a id="mostrarCarrito" class="nav-link" href="./carrito.html">Ver Carrito</a>
+        </li>
+        </ul>
+    </div>
       <section id="showProducts">
         <div id="showAllProducts">
           
@@ -48,7 +47,7 @@
                 <h4 class="liPrecio">Precio</h4>
                 <h4 class="liCantidad">Cantidad</h4>
             </div>
-            <div class="div">
+            <div class="divCart">
               
             </div>
             <h4 id="totalCompra">Precio Total : AR$</h4> 
