--- a/carrito.html
+++ b/carrito.html
@@ -52,6 +52,14 @@
   <div class="buttonComprar">
     <button id="comprar" >Comprar</button>
   </div>
+  <footer class="footer">
+    <ul  id="pie-pagina">
+      <li><a href="https://www.whatsapp.com/?lang=es" target="blank"><i class="bi bi-whatsapp"></i></a></li>
+      <li><a href="https://web.telegram.org/z/" target="blank"><i class="bi bi-telegram"></i></a></li>
+      <li><a href="https://www.instagram.com/" target="blank"><i class="bi bi-instagram"></i></a></li>
+      <li><a href="https://twitter.com/" target="blank"><i class="bi bi-twitter"></i></a></li>
+    </ul>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="carrito.js">
   </script>
